# flarellm

./: .gitignore  BENCHMARKS.md  BENCHMARK_HISTORY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/scripts/: check_perf_regression.py
.github/workflows/: benchmark-pr.yml  benchmark.yml  ci.yml  deploy-pages.yml  npm-publish.yml
benchmarks/: baseline.json
blog/: 2026-04-14-flare-v1.1.md
examples/browser-chat/: README.md  index.html
flare-core/: Cargo.toml  build.rs
flare-core/examples/: matvec_bench.rs
flare-core/src/: chat.rs  config.rs  error.rs  generate.rs  kv_cache.rs  lib.rs  lora.rs  memory.rs  model.rs  sampling.rs  tensor.rs  tokenizer.rs
flare-core/tests/: inference_pipeline.rs
flare-edge/: Cargo.toml
flare-edge/examples/: edge_cli.rs
flare-edge/src/: api.rs  engine.rs  lib.rs
flare-gpu/: Cargo.toml
flare-gpu/examples/: gpu_bench.rs
flare-gpu/shaders/: add_residual.wgsl  attention.wgsl  attention_f16.wgsl  attention_subgroup.wgsl  batched_matvec.wgsl  batched_matvec_subgroup.wgsl  batched_rmsnorm.wgsl  batched_rmsnorm_f16.wgsl  batched_rope.wgsl  dequant_matvec_bf16.wgsl  dequant_matvec_f16.wgsl  dequant_matvec_iq1s.wgsl  dequant_matvec_iq2s.wgsl  dequant_matvec_iq2xs.wgsl  dequant_matvec_iq2xxs.wgsl  dequant_matvec_iq3s.wgsl  dequant_matvec_iq3xxs.wgsl  dequant_matvec_iq4nl.wgsl  dequant_matvec_iq4xs.wgsl  dequant_matvec_q2k.wgsl  dequant_matvec_q3k.wgsl  dequant_matvec_q4_0.wgsl  dequant_matvec_q4_1.wgsl  dequant_matvec_q4k.wgsl  dequant_matvec_q5_0.wgsl  dequant_matvec_q5_1.wgsl  dequant_matvec_q5k.wgsl  dequant_matvec_q6k.wgsl  dequant_matvec_q8_0.wgsl  dequant_matvec_q8_1.wgsl  dequant_matvec_ternary.wgsl  dequant_q3k.wgsl  dequant_q4_1.wgsl  dequant_q4k.wgsl  dequant_q5k.wgsl  dequant_q6k.wgsl  f32_to_f16.wgsl  fused_silu_mul_dequant_matvec_q8_0.wgsl  matmul.wgsl  prefill_attention.wgsl  (+4 more)
flare-gpu/src/: backend.rs  buffers.rs  kv_cache.rs  lib.rs  pipeline.rs
flare-gpu/tests/: gpu_backend.rs
flare-loader/: Cargo.toml
flare-loader/proptest-regressions/: gguf.txt
flare-loader/src/: gguf.rs  lib.rs  lora.rs  progressive.rs  quantize.rs  safetensors.rs  tokenizer.rs  weights.rs
flare-loader/tests/: q4k_real_model.rs  q5_0_real_model.rs
flare-server/: Cargo.toml
flare-server/examples/: e2e_bench.rs  prefill_profile.rs
flare-server/src/: api.rs  cli.rs  info.rs  main.rs  sse.rs
flare-simd/: Cargo.toml
flare-simd/benches/: matmul_bench.rs
flare-simd/src/: backend.rs  lib.rs  matmul.rs
flare-web/: Cargo.toml  README.md  package.json
flare-web/demo/: README.md  index.html
flare-web/js/: index.ts  types.ts  webtransport-loader.js  worker.ts
flare-web/src/: lib.rs
flarellm/: Cargo.toml
flarellm/examples/: simple_chat.rs
flarellm/src/: lib.rs
scripts/: bench_multi.sh  build_pgo.sh  check_perf_regression.sh  download_baseline_model.sh  download_q4k_model.sh
