[workspace]
members = [
    "flarellm",
    "flare-core",
    "flare-loader",
    "flare-gpu",
    "flare-simd",
    "flare-web",
    "flare-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sauravpanda/flarellm"
description = "A WASM-first LLM inference engine with WebGPU acceleration"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2"
byteorder = "1"
log = "0.4"

# GPU
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
