[package]
name = "flare-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core inference engine for Flare LLM runtime"

[dependencies]
thiserror = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Native multi-threading via rayon. Disabled on wasm32 (no threads).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
