[package]
name = "flarellm-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebGPU/wgpu compute backend for Flare LLM inference"
keywords = ["webgpu", "wgpu", "llm", "gpu", "compute"]
categories = ["graphics", "science"]
readme = "../README.md"

[lib]
name = "flare_gpu"

[dependencies]
flare-core = { package = "flarellm-core", path = "../flare-core", version = "0.1.0" }
wgpu = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
byteorder = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
pollster = "0.4"

[dev-dependencies]
pollster = "0.4"
flare-loader = { package = "flarellm-loader", path = "../flare-loader", version = "0.1.0" }
