[package]
name = "flarellm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native server with OpenAI-compatible API for Flare LLM inference"
keywords = ["llm", "server", "openai", "inference", "api"]
categories = ["web-programming::http-server", "science"]
readme = "../README.md"

[[bin]]
name = "flare-server"
path = "src/main.rs"

[[bin]]
name = "flare-cli"
path = "src/cli.rs"

[[bin]]
name = "flare-info"
path = "src/info.rs"

[dependencies]
flare-core = { package = "flarellm-core", path = "../flare-core", version = "0.1.0" }
flare-loader = { package = "flarellm-loader", path = "../flare-loader", version = "0.1.0" }
flare-gpu = { package = "flarellm-gpu", path = "../flare-gpu", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
pollster = "0.4"
