[package]
name = "flarellm"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sauravpanda/flarellm"
description = "A WASM-first LLM inference engine with WebGPU acceleration"
keywords = ["llm", "wasm", "webgpu", "inference", "ai"]
categories = ["wasm", "science"]
